# k8s-image-updater

./: README.md  environment.yaml  pyproject.toml
k8s_image_updater/: imageupdater.py
k8s_image_updater/helpers/: file.py  image.py  registrylogin.py
